# ircii

./: .cvsignore  ChangeLog  INSTALL  Makefile.in  NEWS  README  aclocal.m4  bsdinstall  configure  configure.in  ircbug.in  mkinstalldirs  todo
contrib/: README  check_load  random_nick
doc/: Copyright  OLDNEWS  VERSIONS  crypto  ctcp  example_menu  ircII.1  ircbug.1  ircii.spec.in  ircio  query-pr.1
help/: .date  abort  admin  away  basics  msg  query  server
help/ircii/: copyright
include/: .cvsignore  alias.h  buffer.h  cast_sbox.h  config.h.dist  ctcp.h  dcc.h  debug.h  defs.h.in  edit.h  exec.h  flood.h  funny.h  help.h  history.h  hold.h  hook.h  icb.h  if.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  irccrypt.h  ircterm.h  keys.h  lastlog.h  list.h  log.h  mail.h  menu.h  names.h  newio.h  notice.h  notify.h  numbers.h  output.h  parse.h  queue.h  (+12 more)
script/: 2.8script  2.9script  action  alias  autoop  autoquery  basical  bigcheese  brc  channel  columns  commander  compl.mods  complete  cursor  dccchan  default  deutsch  disc  dmsg  edit  english  events  extensions  finger  fkeys  flood  fnet  functions  global  help  history  history-match  icb  imap  ircIIhelp  ircprimer  ircrc  kickmenu  killpath  (+42 more)
source/: .cvsignore  aes.c  alias.c  cast.c  cipher-test.c  crypt.c  ctcp.c  dcc.c  debug.c  edit.c  empty_metakeys.inc  exec.c  flood.c  funny.c  getaddrinfo.c  getnameinfo.c  help.c  history.c  hold.c  hook.c  icb.c  if.c  ignore.c  inet_ntop.c  inet_pton.c  input.c  irc.c  ircaux.c  ircflush.c  ircio.c  ircsig.c  keys.c  lastlog.c  list.c  log.c  mail.c  menu.c  mkmksiginc.pl  mksiginc.c  names.c  (+23 more)
source/rijndael/: README  rijndael-alg-ref.c  rijndael-api-ref.c  rijndael-api-ref.h  rijndaeltest-ref.c
